# tensor_mixology

./: .gitignore  CLAUDE.md  MODEL.md  README.md  VISUAL_GUIDE.md  attention.py  attention_demo.py  attention_test.py  educational_examples.py  feed_forward.py  feed_forward_test.py  flops_counter.py  flops_counter_test.py  flops_summary.py  format.sh  format_code.py  model_configs.py  model_demo.py  pyproject.toml  rank_mixer_architecture.py  rank_mixer_models.py  squeeze_excitation.py  squeeze_excitation_test.py  token_mixer.py  token_mixer_test.py
